tests/NormalTests/paczka1/small_fuzzy/73656816.err
Error in line 9: xdbCP6Gv6bU S241 92,1
Error in line 14: lnWoac A521 53,4
Error in line 11: 1dSXNAA S529 375,3
